# INSIGHTFLOW

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  SECURITY.md  alembic.ini  api_design.md  database_schema.md  pyproject.toml  requirements.txt  system_architecture.md  test.db
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: __init__.py  anomaly_detection_agent.py  base.py  campaign_evaluation_agent.py  data_analysis_agent.py  data_validation_agent.py  insight_generation_agent.py  kpi_computation_agent.py  recommendation_agent.py  report_generation_agent.py  trend_detection_agent.py
backend/app/api/: deps.py
backend/app/connectors/: __init__.py  base_connector.py  google_ads_connector.py  meta_ads_connector.py  tiktok_ads_connector.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
backend/app/events/: __init__.py  event_bus.py
backend/app/middleware/: __init__.py  error_handler.py  rate_limiter.py  request_context.py  request_size.py  security_headers.py
backend/app/models/: __init__.py  ad.py  ad_set.py  base.py  campaign.py  data_source_connection.py  insight.py  metrics.py  organization.py  recommendation.py  report.py  user.py
backend/app/pipeline/: __init__.py  orchestrator.py  pipeline_context.py  pipeline_runner.py  pipeline_state.py  runner.py  schemas.py
backend/app/repositories/: base.py  organization_repository.py  user_repository.py
backend/app/schemas/: auth.py  common.py
backend/tests/: conftest.py  test_pipeline.py  test_security.py
(+121 files in other folders)
